tests/expected_invalid_parse_missing_field_type.diag.out
<input>:4:1: error: expected type name
    }
    ^
